test/end-to-end/compile-errors/cant-infer-type-args.crow
f[t] void()
	()

main void()
	f
